--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^4.4.1",
+    "csv-stringify": "^5.3.0",
     "enquirer": "^1.0.3",
     "glob": "^7.1.3",
     "markdown-table": "^1.1.2",
